tests/miniJava/neg/003017_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = int [] java ; new int [ 0 ] ; } }
